tests/negative/regression/r33.orng
// r33.orng:6:36: error: error: recursive definition detected
//     main += match const main = main ; 4 { _ => 3 } 
//                                   ^
// 
fn main() -> Int { 
    main += match const main = main ; 4 { _ => 3 } 
} 
